<resources>
    <string name="app_name">Teach</string>
    <string name="txt_email_login">Email</string>
    <string name="txt_password_login">Password</string>
    <string name="txt_indicacion_login">Iniciar Sesión</string>
    <string name="btn_login">Login</string>
    <string name="btn_registrarse_login">Registrarse</string>
    <string name="img_descipcion">Imagen Login</string>

    <string name="txt_nombre_registration">Nombre</string>
    <string name="txt_email_registration">Email</string>
    <string name="txt_password_registration">Contraseña</string>
    <string name="txt_repet_password_registration">Repite tu contraseña</string>
    <string name="btn_registrarse_registration">Registrarse</string>
    <string name="btn_cancelar_registration">Cancelar</string>
    <string name="txt_indicacion_registration">¡Ya estás a un paso!</string>
    <string name="txt_indicacion_completa_registration">Por favor, ingresa tus datos para completar el registro de tu cuenta.</string>

    <string name="btn_agregar_gestionar_clase">Agregar</string>

    <string name="txt_indicacion_solicitar_clase">Solicitar clase</string>
    <string name="txt_materia_solicitar_clase">Materia</string>
    <string name="txt_tema_solicitar_clase">Tema</string>
    <string name="txt_desc_tema_solicitar_clase">En la clase usted comprenderá los principios
        básicos de la temática, apoyado en ejemplos prácticos que le ayudarán a interiorizar
        mejor los conceptos.</string>
    <string name="txt_inquietudes_solicitar_clase">¿Que dudas presenta en relación al tema en particular?</string>
    <string name="txt_fecha_solicitar_clase">Fecha</string>
    <string name="txt_hora_solicitar_clase">Hora</string>
    <string name="txt_duracion_solicitar_clase">Duracion</string>
    <string name="txt_duracion_solicitar_clase_x_defecto">0</string>
    <string name="btn_guardar_solicitar_clase">Guardar</string>
    <string name="swt_estado_solicitar_clase">Estado</string>

    <string name="txt_listaClase_clase">Lista clases</string>
    <string name="btn_listado_clases">Cancelar</string>

    <string name="txt_detalle_class">Detalle clase</string>
    <string name="btn_eliminar_class">Eliminar</string>
    <string name="btn_editar_class">Editar</string>
    <string name="txv_etiqueta_duracion_detalle_clase">Duración:</string>
    <string name="txv_etiqueta_fecha_detalle_clase">Fecha:</string>
    <string name="txv_etiqueta_hora_detalle_clase">Hora:</string>
    <string name="txv_etiqueta_tiempo_detalle_clase">hora (s)</string>
    <string name="txv_progreso_detalle_clase">Progreso</string>

    <string name="txt_editar_class">Editar clase</string>
    <string name="txt_materia_editar_clase">Materia</string>
    <string name="txt_tema_editar_clase">Tema</string>
    <string name="txt_inquietudes_editar_clase">¿Que dudas presenta en relación al tema en particular?</string>
    <string name="txt_fecha_editar_clase">Fecha</string>
    <string name="txt_hora_editar_clase">Hora</string>
    <string name="txt_duracion_editar_clase">Duracion</string>
    <string name="btn_guardar_editar_clase">Guardar</string>

    <string name="txt_nombre_editar_perfil">Nombre</string>
    <string name="txt_email_editar_perfil">Email</string>
    <string name="txt_telefono_editar_perfil">Telefono</string>
    <string name="txt_direccion_editar_perfil">Direccion</string>
    <string name="txt_password_editar_perfil">Contraseña</string>
    <string name="txt_repet_password_editar_perfil">Repite tu contraseña</string>
    <string name="txt_indicacion_editar_perfil">Editar perfil</string>
    <string name="btn_guardar_editar_perfil">Guardar</string>

</resources>