<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".EditarPerfilActivity" >

    <TextView
        android:id="@+id/txt_titulo_editar_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_indicacion_editar_perfil"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_nombre_editar_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/txt_nombre_editar_perfil"
        android:ems="10"
        android:hint="@string/txt_nombre_editar_perfil"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/txt_telefono_editar_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/txt_telefono_editar_perfil"
        android:ems="10"
        android:hint="@string/txt_telefono_editar_perfil"
        android:inputType="phone" />

    <EditText
        android:id="@+id/txt_direccion_editar_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_direccion_editar_perfil"
        android:inputType="textPersonName"
        android:autofillHints="@string/txt_direccion_editar_perfil" />

    <EditText
        android:id="@+id/txt_password_editar_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_password_editar_perfil"
        android:inputType="textPassword"
        android:autofillHints="@string/txt_password_editar_perfil" />

    <EditText
        android:id="@+id/txt_repet_password_editar_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_repet_password_editar_perfil"
        android:inputType="textPassword"
        android:autofillHints="@string/txt_repet_password_editar_perfil" />

    <Button
        android:id="@+id/btn_guardar_editar_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar_editar_perfil" />

    <Button
        android:id="@+id/btn_cancelar_editar_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancelar_registration" />

</LinearLayout>
    </ScrollView>