<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp"
        tools:context=".RegistrarseActivity" >

        <TextView
            android:id="@+id/txt_titulo_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_indicacion_registration"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_descripcion_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_indicacion_completa_registration"
            android:textAlignment="gravity"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txt_nombre_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_nombre_registration"
            android:inputType="textPersonName"
            android:autofillHints="@string/txt_nombre_registration" />

        <EditText
            android:id="@+id/txt_email_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_email_registration"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/txt_email_registration" />

        <EditText
            android:id="@+id/txt_password_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_password_registration"
            android:inputType="textPassword"
            android:autofillHints="@string/txt_password_registration" />

        <EditText
            android:id="@+id/txt_repet_pass_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_repet_password_registration"
            android:inputType="textPassword"
            android:autofillHints="@string/txt_repet_password_registration"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_registrarse_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registrarse_registration" />

        <Button
            android:id="@+id/btn_cancelar_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar_registration" />
    </LinearLayout>
</ScrollView>