<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/txt_iniciar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_indicacion_login"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/txt_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/txt_email_login"
            android:ems="10"
            android:hint="@string/txt_email_login"
            android:inputType="textEmailAddress"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/txt_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/txt_password_login"
            android:ems="10"
            android:hint="@string/txt_password_login"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_iniciar_sesion_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login" />

        <Button
            android:id="@+id/btn_registrarse_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registrarse_login" />

    </LinearLayout>
</ScrollView>
