<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp"
        tools:context=".PopupDetalleClaseActivity" >

        <TextView
            android:id="@+id/txv_titulo_detalle_clase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_detalle_class"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txv_materia_detalle_clase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txv_tema_detalle_clase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txv_etiqueta_fecha_detalle_clase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txv_etiqueta_fecha_detalle_clase"
                android:textStyle="bold"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/txv_fecha_detalle_clase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txv_etiqueta_hora_solicitar_clase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txv_etiqueta_hora_detalle_clase"
                android:textStyle="bold"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/txv_hora_detalle_clase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txv_etiqueta_duracion_detalle_clase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txv_etiqueta_duracion_detalle_clase"
                android:textStyle="bold"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/txv_duracion_detalle_clase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <Switch
            android:id="@+id/swt_estado_solicitar_clase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/swt_estado_solicitar_clase"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            android:textOff="Inactiva"
            android:textOn="Activa"
            android:showText="true" />

        <Button
            android:id="@+id/btn_buscar_detalle_clase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_editar_class" />

        <Button
            android:id="@+id/btn_volver_detalle_clase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_listado_clases" />

    </LinearLayout>
</ScrollView>